--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevOps Портфолио | [Ваше Имя]</title>
+    <title>DevOps Portfolio | [Your Name]</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -21,10 +21,10 @@
             <nav class="navbar">
                 <a href="#" class="logo">DevOps<span>Portfolio</span></a>
                 <ul class="nav-links">
-                    <li><a href="#about">About me</a></li>
+                    <li><a href="#about">About Me</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contacts</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -43,11 +43,11 @@
                 <p class="hero-subtitle animate-pop-in">DevOps Engineer</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary animate-pop-in">My Projects</a>
-                    <a href="#contact" class="btn btn-secondary animate-pop-in">Contact me</a>
+                    <a href="#contact" class="btn btn-secondary animate-pop-in">Contact Me</a>
                 </div>
             </div>
             <div class="hero-image animate-pop-in">
-                <img src="images/avatar.jpg" alt="Фото профиля" class="profile-image">
+                <img src="images/avatar.jpg" alt="Profile Photo" class="profile-image">
             </div>
         </div>
     </section>
@@ -55,25 +55,25 @@
     <!-- About Section -->
     <section id="about" class="section about">
         <div class="container">
-            <h2 class="section-title">Обо мне</h2>
+            <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Я DevOps-инженер с опытом развертывания и поддержки облачной инфраструктуры. Специализируюсь на:</p>
+                    <p>I am a DevOps engineer with experience in deploying and maintaining cloud infrastructure. My expertise includes:</p>
                     <ul class="about-list">
-                        <li><i class="fas fa-check-circle"></i> Настройке CI/CD пайплайнов</li>
-                        <li><i class="fas fa-check-circle"></i> Контейнеризации приложений</li>
-                        <li><i class="fas fa-check-circle"></i> Автоматизации развертывания</li>
-                        <li><i class="fas fa-check-circle"></i> Мониторингу инфраструктуры</li>
+                        <li><i class="fas fa-check-circle"></i> Setting up CI/CD pipelines</li>
+                        <li><i class="fas fa-check-circle"></i> Containerizing applications</li>
+                        <li><i class="fas fa-check-circle"></i> Automating deployments</li>
+                        <li><i class="fas fa-check-circle"></i> Infrastructure monitoring</li>
                     </ul>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
                         <div class="stat-number" data-count="10">0</div>
-                        <div class="stat-text">Завершенных проектов</div>
+                        <div class="stat-text">Completed Projects</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number" data-count="5">0</div>
-                        <div class="stat-text">Сертификатов</div>
+                        <div class="stat-text">Certifications</div>
                     </div>
                 </div>
             </div>
@@ -83,10 +83,10 @@
     <!-- Skills Section -->
     <section id="skills" class="section skills">
         <div class="container">
-            <h2 class="section-title">Технические навыки</h2>
+            <h2 class="section-title">Technical Skills</h2>
             <div class="skills-container">
                 <div class="skill-category">
-                    <h3>Контейнеризация</h3>
+                    <h3>Containerization</h3>
                     <div class="skill-item">
                         <div class="skill-name">Docker</div>
                         <div class="skill-bar">
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="skill-category">
-                    <h3>Облачные платформы</h3>
+                    <h3>Cloud Platforms</h3>
                     <div class="skill-item">
                         <div class="skill-name">AWS</div>
                         <div class="skill-bar">
@@ -116,8 +116,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Добавьте больше категорий по аналогии -->
             </div>
         </div>
     </section>
@@ -125,18 +123,18 @@
     <!-- Projects Section -->
     <section id="projects" class="section projects">
         <div class="container">
-            <h2 class="section-title">Мои проекты</h2>
+            <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
                         <img src="images/project1.jpg" alt="Docker + Nginx">
                         <div class="project-overlay">
-                            <a href="projects/docker-monitoring.html" class="btn btn-primary">Подробнее</a>
+                            <a href="projects/docker-monitoring.html" class="btn btn-primary">More Details</a>
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>Docker + Nginx с мониторингом</h3>
-                        <p>Развертывание статичного сайта с Prometheus/Grafana</p>
+                        <h3>Docker + Nginx with Monitoring</h3>
+                        <p>Deploying a static site with Prometheus/Grafana</p>
                         <div class="project-tags">
                             <span class="tag">Docker</span>
                             <span class="tag">Nginx</span>
@@ -149,12 +147,12 @@
                     <div class="project-image">
                         <img src="images/project2.jpg" alt="Kubernetes Cluster">
                         <div class="project-overlay">
-                            <a href="projects/kubernetes-cluster.html" class="btn btn-primary">Подробнее</a>
+                            <a href="projects/kubernetes-cluster.html" class="btn btn-primary">More Details</a>
                         </div>
                     </div>
                     <div class="project-info">
                         <h3>Kubernetes Cluster</h3>
-                        <p>Развертывание отказоустойчивого кластера</p>
+                        <p>Deploying a fault-tolerant cluster</p>
                         <div class="project-tags">
                             <span class="tag">Kubernetes</span>
                             <span class="tag">Terraform</span>
@@ -162,8 +160,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Добавьте больше проектов -->
             </div>
         </div>
     </section>
@@ -193,24 +189,26 @@
                 </div>
                 <form class="contact-form">
                     <div class="form-group">
-                        <input type="text" placeholder="Ваше имя" required>
+                        <input type="text" placeholder="Your name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="Ваш email" required>
+                        <input type="email" placeholder="Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea placeholder="Ваше сообщение" required></textarea>
+                        <textarea placeholder="Your message" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Отправить сообщение</button>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
             </div>
         </div>
     </section>
 
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2023 DevOps Portfolio. Все права защищены.</p>
+            <p>&copy; 2025 DevOps Portfolio. All rights reserved.</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
